# secure-coding-mcp

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  formatting-and-linting.yml
src/: secure_coding_server.py
tests/unittests/: conftest.py  test_secure_coding_server.py
